denuncias-qa/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-22T19:36:37Z"
    labels:
      app: api-integracion
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: api-integracion
    namespace: denuncias-qa
    resourceVersion: "9199069"
    uid: c4448344-8696-4059-b501-d3fea337a42c
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-22T19:36:37Z"
    labels:
      app: dptc-cron001-reportes
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: dptc-cron001-reportes
    namespace: denuncias-qa
    resourceVersion: "9199074"
    uid: 8cab9e4b-82c5-4e33-be5b-da3801e46bf9
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-22T19:36:37Z"
    labels:
      app: dptc-serv001-denuncia
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: dptc-serv001-denuncia
    namespace: denuncias-qa
    resourceVersion: "9199077"
    uid: 3464bd4a-4fb3-4b87-a8a2-a4cddd291dbb
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-22T19:36:37Z"
    labels:
      app: dptc-serv002-bff
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: dptc-serv002-bff
    namespace: denuncias-qa
    resourceVersion: "9199079"
    uid: f92e7099-dfad-4ee2-b93e-5d27332776b4
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-22T19:36:38Z"
    labels:
      app: front001-denuncias
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: front001-denuncias
    namespace: denuncias-qa
    resourceVersion: "9199080"
    uid: 16650f57-f351-4b36-bf96-343f9feb1c7f
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-22T19:36:38Z"
    labels:
      app: proxy001-serv-externos
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: proxy001-serv-externos
    namespace: denuncias-qa
    resourceVersion: "9199081"
    uid: e4839d48-ae13-48b0-8ad3-1ef4ae0cf4ae
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
