denuncias-qa/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-22T19:36:39Z"
    generateName: api-integracion-
    generation: 1
    labels:
      app: api-integracion
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: api-integracion
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: api-integracion-knrd9
    namespace: denuncias-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: api-integracion
      uid: 78bbd207-3e8b-45e2-a0d3-f984ac15d194
    resourceVersion: "476054108"
    uid: e706dfb0-3d65-4162-989e-71ddf43adfd7
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-22T19:36:39Z"
    generateName: dptc-cron001-reportes-
    generation: 1
    labels:
      app: dptc-cron001-reportes
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: dptc-cron001-reportes
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: dptc-cron001-reportes-js8bn
    namespace: denuncias-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: dptc-cron001-reportes
      uid: 89b0de00-d088-4483-accf-045aede701c4
    resourceVersion: "476054040"
    uid: 069c55e0-c7a8-4dab-a12f-e0fc1aee8d11
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-22T19:36:39Z"
    generateName: dptc-serv001-denuncia-
    generation: 1
    labels:
      app: dptc-serv001-denuncia
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: dptc-serv001-denuncia
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: dptc-serv001-denuncia-qm8nt
    namespace: denuncias-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: dptc-serv001-denuncia
      uid: 35b805c6-c74f-4ec8-bb48-7da6d5bbfc7a
    resourceVersion: "476054052"
    uid: 3cfa1adb-8229-48ae-8fe6-a97e9c10c2d4
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-22T19:36:39Z"
    generateName: dptc-serv002-bff-
    generation: 1
    labels:
      app: dptc-serv002-bff
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: dptc-serv002-bff
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: dptc-serv002-bff-fghvv
    namespace: denuncias-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: dptc-serv002-bff
      uid: 21b0baef-8974-41b0-9b26-d688c4de528c
    resourceVersion: "476066959"
    uid: 20bf2f05-40cb-4f01-83ba-7a736979761c
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-22T19:36:39Z"
    generateName: front001-denuncias-
    generation: 1
    labels:
      app: front001-denuncias
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: front001-denuncias
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: front001-denuncias-cgjgb
    namespace: denuncias-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: front001-denuncias
      uid: d8b99c38-c0a3-4d2e-9ed3-a26b64854854
    resourceVersion: "476054106"
    uid: 0d93e55f-4fb4-4eae-ae22-bd8b25f0e802
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-22T19:36:39Z"
    generateName: proxy001-serv-externos-
    generation: 1
    labels:
      app: proxy001-serv-externos
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: proxy001-serv-externos
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: proxy001-serv-externos-p9x4k
    namespace: denuncias-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: proxy001-serv-externos
      uid: 91f6f148-9451-48ad-8f97-7e3c5ce4762b
    resourceVersion: "476054041"
    uid: 756658fb-fd8b-4260-a4cc-f0492015a79d
  ports: null
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
