denuncias-qa/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-22T19:36:39Z"
    labels:
      app: api-integracion
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: api-integracion
    namespace: denuncias-qa
    resourceVersion: "9199133"
    uid: ce74e2ba-94fb-4df7-b1ea-e6e0b80d9bd5
  spec:
    host: api-integracion-denuncias-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: api-integracion
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-22T19:36:39Z"
        status: "True"
        type: Admitted
      host: api-integracion-denuncias-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-22T19:36:39Z"
    labels:
      app: dptc-serv001-denuncia
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: dptc-serv001-denuncia
    namespace: denuncias-qa
    resourceVersion: "9199135"
    uid: c6c7db6f-b9c7-44d8-b372-068403583ea4
  spec:
    host: dptc-serv001-denuncias-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: dptc-serv001-denuncia
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-22T19:36:39Z"
        status: "True"
        type: Admitted
      host: dptc-serv001-denuncias-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-22T19:36:39Z"
    labels:
      app: dptc-serv002-bff
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: dptc-serv002-bff
    namespace: denuncias-qa
    resourceVersion: "9199137"
    uid: 7cba9324-d669-46e7-bbb3-d9a82cb187b6
  spec:
    host: dptc-serv002-denuncias-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: dptc-serv002-bff
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-22T19:36:39Z"
        status: "True"
        type: Admitted
      host: dptc-serv002-denuncias-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-22T19:36:39Z"
    labels:
      app: front001-denuncias
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: front001-denuncias
    namespace: denuncias-qa
    resourceVersion: "9199139"
    uid: e5d3c3fd-156f-49a4-848c-2f2b83930f7f
  spec:
    host: front001-denuncias-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: front001-denuncias
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-22T19:36:39Z"
        status: "True"
        type: Admitted
      host: front001-denuncias-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-22T19:36:39Z"
    labels:
      app: proxy001-serv-externos
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: proxy001-serv-externos
    namespace: denuncias-qa
    resourceVersion: "9199141"
    uid: 25987c3c-80eb-49d5-a532-0b360452e2f5
  spec:
    host: proxy001-denuncias-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: proxy001-serv-externos
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-22T19:36:39Z"
        status: "True"
        type: Admitted
      host: proxy001-denuncias-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
