denuncias-qa/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-22T19:36:39Z"
    labels:
      app: api-integracion
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: api-integracion
    namespace: denuncias-qa
    resourceVersion: "9199144"
    uid: 78bbd207-3e8b-45e2-a0d3-f984ac15d194
  spec:
    clusterIP: 172.30.20.183
    clusterIPs:
    - 172.30.20.183
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: api-integracion
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-22T19:36:39Z"
    labels:
      app: dptc-cron001-reportes
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: dptc-cron001-reportes
    namespace: denuncias-qa
    resourceVersion: "9199147"
    uid: 89b0de00-d088-4483-accf-045aede701c4
  spec:
    clusterIP: 172.30.133.9
    clusterIPs:
    - 172.30.133.9
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: dptc-cron001-reportes
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-22T19:36:39Z"
    labels:
      app: dptc-serv001-denuncia
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: dptc-serv001-denuncia
    namespace: denuncias-qa
    resourceVersion: "9199152"
    uid: 35b805c6-c74f-4ec8-bb48-7da6d5bbfc7a
  spec:
    clusterIP: 172.30.113.222
    clusterIPs:
    - 172.30.113.222
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: dptc-serv001-denuncia
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-22T19:36:39Z"
    labels:
      app: dptc-serv002-bff
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: dptc-serv002-bff
    namespace: denuncias-qa
    resourceVersion: "9199156"
    uid: 21b0baef-8974-41b0-9b26-d688c4de528c
  spec:
    clusterIP: 172.30.124.0
    clusterIPs:
    - 172.30.124.0
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: dptc-serv002-bff
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-22T19:36:39Z"
    labels:
      app: front001-denuncias
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: front001-denuncias
    namespace: denuncias-qa
    resourceVersion: "9199162"
    uid: d8b99c38-c0a3-4d2e-9ed3-a26b64854854
  spec:
    clusterIP: 172.30.221.97
    clusterIPs:
    - 172.30.221.97
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 3000
    selector:
      deploymentconfig: front001-denuncias
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-22T19:36:39Z"
    labels:
      app: proxy001-serv-externos
      migration.openshift.io/migrated-by-migmigration: f7c420f5-e043-45c4-9c59-f5c8ea87984b
      migration.openshift.io/migrated-by-migplan: 4744b907-f899-4d99-9c40-21dc5fe59e15
      velero.io/backup-name: migration-d8805-initial-56dz6
      velero.io/restore-name: migration-d8805-final-6n79s
    name: proxy001-serv-externos
    namespace: denuncias-qa
    resourceVersion: "9199165"
    uid: 91f6f148-9451-48ad-8f97-7e3c5ce4762b
  spec:
    clusterIP: 172.30.246.74
    clusterIPs:
    - 172.30.246.74
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: proxy001-serv-externos
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
